ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration7/input.ts.stderr
error: Unexpected token `constructor`. Expected * for generator, private key, identifier or async
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration7/input.ts:2:18
  |
2 |   public private constructor() { }
  |                  ^^^^^^^^^^^

